--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -36,7 +36,7 @@ jobs:
         mkdir $HOME/Arduino
         mkdir $HOME/Arduino/libraries
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-        echo "$GITHUB_WORKSPACE/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
         
     - name: Install BSP and Libraries
       env:
