install missing libraries

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -49,7 +49,6 @@ jobs:
       env:
         BSP_URL: https://adafruit.github.io/arduino-board-index/package_adafruit_index.json
         BSP_PATH: .arduino15/packages/adafruit/hardware/samd
-        LIB_DEPS: FlashStorage SD
       run: |
         arduino-cli config init
         arduino-cli core update-index
@@ -60,7 +59,7 @@ jobs:
         BSP_VERSION=`eval ls $HOME/$BSP_PATH`
         rm -r $HOME/$BSP_PATH/*
         ln -s $GITHUB_WORKSPACE $HOME/$BSP_PATH/$BSP_VERSION
-        arduino-cli lib install $LIB_DEPS
+        arduino-cli lib install "Adafruit NeoPixel" "Adafruit seesaw Library" "FlashStorage" "MIDI Library" "SD" "SdFat - Adafruit Fork"
 
     - name: Build examples
       run: python3 extras/build_all.py ${{ matrix.board }}
