--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -59,7 +59,7 @@ jobs:
         BSP_VERSION=`eval ls $HOME/$BSP_PATH`
         rm -r $HOME/$BSP_PATH/*
         ln -s $GITHUB_WORKSPACE $HOME/$BSP_PATH/$BSP_VERSION
-        arduino-cli lib install "Adafruit NeoPixel" "Adafruit seesaw Library" "FlashStorage" "MIDI Library" "SD" "SdFat - Adafruit Fork"
+        arduino-cli lib install "Adafruit NeoPixel" "Adafruit seesaw Library" "Adafruit SPIFlash" "FlashStorage" "MIDI Library" "SD" "SdFat - Adafruit Fork"
 
     - name: Build examples
       run: python3 extras/build_all.py ${{ matrix.board }}
